--- a/scss/_responsive-styling.scss
+++ b/scss/_responsive-styling.scss
@@ -73,10 +73,8 @@ footer {
       .project-contents {
 
         p,
-        ol,
-        ul,
         details {
-          width: 35em;
+          width: 60%;
         }
       }
     }
